# cryptnox-snap

./: .cicd.env.var  .gitignore  .gitlab-ci.yml  README.md  acsccid-1.1.8.tar.bz2  ccid-1.4.35.tar.bz2  cryptnox-source.tar  pcsc-lite-1.9.3.tar.bz2  pyenv-installer  version-cryptnox-manual
.circleci/: config.yml  credentials.enc
.github/workflows/: build.yaml  check_cryptnox_version.yml  manual_build.yaml
cryptnox-card/: .gitignore  Build-Windows.bat  CHANGELO.md  Pipfile  README.md  conf.py  create_deb.py  cryptnoxcard.bat  cryptnoxcard.example.ini  cryptnoxcard.icns  cryptnoxcard.nsi  cryptnoxcard.spec  cryptnoxcard_deb.spec  cryptnoxcard_mac_os.spec  dev-requirements.txt  index.rst  requirements.txt  setup.py
cryptnox-card/cryptnoxcard/: version.py
cryptnox-card/cryptnoxcard/command/: seed.py
cryptnox-card/docs/: CREATE_DEB.md  CREATE_DMG.md
cryptnox-card/tests/: test_commands.py
cryptnoxpy-oss/: .gitignore  CHANGELOG.md  long_term_card_testing.nsi  long_term_card_testing.spec  setup.cfg  setup.py
cryptnoxpy-oss/cryptnoxpy/: conf.py  reader.py
cryptnoxpy-oss/cryptnoxpy/card/: base.py  basic.py  basic_g0.py  basic_g1.py
cryptnoxpy-oss/tests/: long_term_card_testing.py  test_card.py  test_connection.py  test_operation.py
local/: demo  pyscard-patch.patch
patch/: pyscard-patch.patch
snap/: snapcraft.yaml
snap/hooks/: connect-plug-hardware-observe  connect-plug-raw-usb  install
