[metadata]
name = cryptnoxpy
description-file = README.rst
long_description = file: README.rst
long_description_content_type = text/markdown
keywords =
    python
    cryptography
license = LGPLv3+
author = Cryptnox SA
author_email = info@cryptnox.ch
home-page = https://www.cryptnox.com/
project_urls =
    Source Code = https://github.com/Cryptnox-Software/cryptnoxpy
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
zip_safe = False
include_package_data = True

[options.package_data]
* = *.md

[pbr]
skip_git_sdist=True
skip_changelog=True
skip_authors=True